--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:css": "tailwindcss -i ./src/tw.css -o ./dist/app.css -c ./tailwind.config.js -m",
     "build": "npm run build:css",
+    "build:release": "npm run build && bash ./scripts/build-release.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
