--- a/manifest.json
+++ b/manifest.json
@@ -18,9 +18,10 @@
   "permissions": [],
   "host_permissions": [
     "https://bing.biturl.top/*",
-    "https://gist.githubusercontent.com/*"
+    "https://gist.githubusercontent.com/*",
+    "https://api.github.com/*"
   ],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https: data: blob:; style-src 'self' 'unsafe-inline'; font-src 'self' data: https:; connect-src 'self' https://bing.biturl.top https://gist.githubusercontent.com"
+    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https: data: blob:; style-src 'self' 'unsafe-inline'; font-src 'self' data: https:; connect-src 'self' https://bing.biturl.top https://gist.githubusercontent.com https://api.github.com"
   }
 }
